Use main revision for 1.26 upgrade tests
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/test/e2e/prow.yaml
+++ b/test/e2e/prow.yaml
@@ -1420,7 +1420,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1448,7 +1448,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1476,7 +1476,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1504,7 +1504,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1532,7 +1532,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1560,7 +1560,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1588,7 +1588,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1618,7 +1618,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1648,7 +1648,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1678,7 +1678,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1709,7 +1709,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1739,7 +1739,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1767,7 +1767,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1795,7 +1795,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1823,7 +1823,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1851,7 +1851,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1879,7 +1879,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1907,7 +1907,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1935,7 +1935,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1963,7 +1963,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9417,7 +9417,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9445,7 +9445,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9473,7 +9473,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9501,7 +9501,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9529,7 +9529,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9557,7 +9557,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9585,7 +9585,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9615,7 +9615,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9645,7 +9645,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9675,7 +9675,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9706,7 +9706,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9736,7 +9736,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9764,7 +9764,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9792,7 +9792,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9820,7 +9820,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9848,7 +9848,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9876,7 +9876,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9904,7 +9904,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9932,7 +9932,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9960,7 +9960,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9988,7 +9988,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10016,7 +10016,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10044,7 +10044,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10072,7 +10072,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10100,7 +10100,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10128,7 +10128,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10156,7 +10156,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10184,7 +10184,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10212,7 +10212,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: release/v1.5
+  - base_ref: main
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
