--- a/test/tests.yml
+++ b/test/tests.yml
@@ -306,7 +306,12 @@
 - scenario: csi_ccm_migration
   initVersion: v1.24.10
   infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
     - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
     - name: openstack_default
     - name: openstack_centos
     - name: openstack_rockylinux
@@ -324,7 +329,12 @@
 - scenario: csi_ccm_migration
   initVersion: v1.25.6
   infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
     - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
     - name: openstack_default
     - name: openstack_centos
     - name: openstack_rockylinux
@@ -342,7 +352,12 @@
 - scenario: csi_ccm_migration
   initVersion: v1.26.1
   infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
     - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
     - name: openstack_default
     - name: openstack_centos
     - name: openstack_rockylinux
