Overwrite clusterId with param
Signed-off-by: Fabio Berchtold <jamesclonk@jamesclonk.ch>

--- a/addons/csi-vmware-cloud-director/vcloud-csi-config.yaml
+++ b/addons/csi-vmware-cloud-director/vcloud-csi-config.yaml
@@ -12,5 +12,5 @@ data:
       org: {{ required "Please provide VCD_ORG" .Credentials.VCD_ORG }}
       vdc: {{ required "Please provide VCD_VDC" .Credentials.VCD_VDC }}
       vAppName: {{ .Config.CloudProvider.VMwareCloudDirector.VApp }}
-    clusterid: {{ .Config.Name }}
+    clusterid: {{ default .Config.Name .Params.clusterid }}
 ---
